// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdaptivePanel should render no items provided 1`] = `
<DocumentFragment>
  <div
    class="mainWrapper"
    data-testid="adaptive-panel"
  >
    <div
      class="itemsWrapper"
    />
  </div>
</DocumentFragment>
`;

exports[`AdaptivePanel should render some items 1`] = `
<DocumentFragment>
  <div
    class="mainWrapper"
    data-testid="adaptive-panel"
  >
    <div
      class="itemsWrapper"
    >
      <div
        data-label="Item snapshot-0"
        data-testid="adaptive-item"
      />
      <div
        data-label="Item snapshot-1"
        data-testid="adaptive-item"
      />
      <div
        data-label="Item snapshot-2"
        data-testid="adaptive-item"
      />
      <div
        data-label="Item snapshot-3"
        data-testid="adaptive-item"
      />
      <div
        data-label="Item snapshot-4"
        data-testid="adaptive-item"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`AdaptivePanel should render some items with itemsGap 1`] = `
<DocumentFragment>
  <div
    class="mainWrapper"
    data-testid="adaptive-panel"
  >
    <div
      class="itemsWrapper"
      style="column-gap: 6px;"
    >
      <div
        data-label="Item snapshot-0"
        data-testid="adaptive-item"
      />
      <div
        data-label="Item snapshot-1"
        data-testid="adaptive-item"
      />
      <div
        data-label="Item snapshot-2"
        data-testid="adaptive-item"
      />
      <div
        data-label="Item snapshot-3"
        data-testid="adaptive-item"
      />
      <div
        data-label="Item snapshot-4"
        data-testid="adaptive-item"
      />
    </div>
  </div>
</DocumentFragment>
`;
